Serialize computed style of background shorthand with multiple layers correctly. https://bugs.webkit.org/show_bug.cgi?id=111121

Patch by Matt Woodrow <matt.woodrow@gmail.com> on 2021-11-28
Reviewed by Cameron McCormack.

Source/WebCore:

New subtests added to getComputedStyle-background-shorthand

* css/CSSComputedStyleDeclaration.cpp:
(WebCore::ComputedStyleExtractor::getBackgroundShorthandValue):

LayoutTests:

* fast/css/getComputedStyle/getComputedStyle-background-shorthand-expected.txt:
* fast/css/getComputedStyle/getComputedStyle-background-shorthand.html:


Canonical link: https://commits.webkit.org/244582@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@286200 268f45cc-cd09-0410-ab3c-d52691b4dbfc